[Java] Improve build for Java 10 plus upgrade to Gradle 4.7.